--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/layout.css">
 </head>
 <body>
-    <h1>Navigation Menu Using CSS Flex</h1>
+    <h1>Header Content</h1>
     <header>
         <nav>
             <ul class="navigation">
