--- a/temples.html
+++ b/temples.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Volodymyr Druchok">
     <meta name="description" content="WDD 131 – Dynamic Web Fundamentals - Volodymyr Druchok - Picture Album">
-    <title>Picture Album Assigment</title>
+    <title>Temple Album</title>
     <link rel="stylesheet" href="styles/temples.css">
     <link rel="stylesheet" href="styles/temples-large.css">
     <script src="scripts/temples.js" defer></script>
@@ -16,7 +16,7 @@
 </head>
 <body>
    <header>
-    <h1 class="headr">Temple Album</h1>
+    <h1>Temple Album</h1>
     <button type="button" id="menu"></button>
     <nav>
         <ul class="navigation">
@@ -30,7 +30,7 @@
 
    </header>
    <main>
-        <h1 class="page">Home</h1>
+        <h2>Home</h1>
         <div class="album">
             <figure>
                 <img src="images/temple-placeholder.jpg" alt="Temple Placeholder">
