Added title to button

--- a/temples.html
+++ b/temples.html
@@ -17,7 +17,7 @@
 <body>
    <header>
     <h1>Temple Album</h1>
-    <button type="button" id="menu"></button>
+    <button type="button" id="menu" title="Menu"></button>
     <nav>
         <ul class="navigation">
             <li><a href="temples.html" title="Home" class="active">Home</a></li>
