W03 Assignment: Country Page done fr this time

--- a/place.html
+++ b/place.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Volodymyr Druchok">
-    <meta name="description" content="WDD 131 – Dynamic Web Fundamentals - Volodymyr Druchok - Country Page">
-    <title>Country Page</title>
+    <meta name="description" content="WDD 131 – Dynamic Web Fundamentals - Volodymyr Druchok - Ukraine Country Page">
+    <title>Ukraine Country Page</title>
     <link rel="stylesheet" href="styles/place.css">
     <link rel="stylesheet" href="styles/place-large.css">
     <script src="scripts/place.js" defer></script>
