slight change in the f t titles and desc

--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Volodymyr Druchok">
-    <meta name="description" content="WDD 131 – Dynamic Web Fundamentals - Volodymyr Druchok - Picture Album">
-    <title>Temple Album</title>
+    <meta name="description" content="WDD 131 – Dynamic Web Fundamentals - Volodymyr Druchok - Filtered Picture Album">
+    <title>Filtered Temple Album</title>
     <link rel="stylesheet" href="styles/filtered-temples.css">
     <link rel="stylesheet" href="styles/filtered-temples-large.css">
     <script src="scripts/filtered-temples.js" defer></script>
