--- a/project/index.html
+++ b/project/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Volodymyr Druchok">
-    <meta name="description" content="WDD 131 – Dynamic Web Fundamentals - Volodymyr Druchok - Final Project - Home">
+    <meta name="description" content="WDD 131 - Dynamic Web Fundamentals - Volodymyr Druchok - Final Project - Home">
     <title>Efficient Training Edge - Home</title>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/main-large.css">
