--- a/project/contact.html
+++ b/project/contact.html
@@ -21,7 +21,7 @@
         <button type="button" id="menu" title="Menu"></button>
         <nav>
             <ul class="navigation">
-                <li><a href="home.html" title="Home" >Home</a></li>
+                <li><a href="index.html" title="Home" >Home</a></li>
                 <li><a href="info.html" title="General Information">Info</a></li>
                 <li><a href="contact.html" title="Contact Us" id="active">Contact Us</a></li>
             </ul>  
