--- a/project/index.html
+++ b/project/index.html
@@ -20,7 +20,7 @@
         <button type="button" id="menu" title="Menu"></button>
         <nav>
             <ul class="navigation">
-                <li><a href="home.html" title="Home" id="active" >Home</a></li>
+                <li><a href="index.html" title="Home" id="active" >Home</a></li>
                 <li><a href="info.html" title="General Information">Info</a></li>
                 <li><a href="contact.html" title="Contact Us">Contact Us</a></li>
             </ul>  
