--- a/project/info.html
+++ b/project/info.html
@@ -21,7 +21,7 @@
         <button type="button" id="menu" title="Menu"></button>
         <nav>
             <ul class="navigation">
-                <li><a href="home.html" title="Home">Home</a></li>
+                <li><a href="index.html" title="Home">Home</a></li>
                 <li><a href="info.html" title="General Information" id="active">Info</a></li>
                 <li><a href="contact.html" title="Contact Us">Contact Us</a></li>
             </ul>  
