W06 Project: Completion done ig

--- a/project/info.html
+++ b/project/info.html
@@ -64,6 +64,12 @@
             The best way to find your caloric maintenance would be to first look up some sort of calculator that does that online. Give it your weight, height, and age, and eat whatever the calories it displays for a week. If after a week you gain a little weight, adjust your calories by a few hundred and eat like that for a week. If you lose a bit of weight after that week, add a couple hundred calories to your diet. Rinse and repeat until your weight stabilizes.
         </p>
     </section>
+
+    <div class="result">
+    <h2>What are the type of results that i should expect if i follow all this advice?</h2>
+    <div class="results"></div>
+    <p>This is a one day transformation of a client that followed our advice.</p>
+    </div>
    </main>
    <footer>
         <p class="copyright">© <span id="cyear"></span> | Volodymyr Druchok | Alberta, Canada</p>
