final fixes im done fr now

--- a/project/index.html
+++ b/project/index.html
@@ -40,6 +40,10 @@
             <button id="contact">Ask!</button>
         </section>
 
+        <div class="about">
+            <h2>About Us</h2>
+            <p>The Efficient Training Edge website was created with the express purpose of helping as many people reach their goals and dreams in fitness. Whether you are a beginner, an intermediate, or even an advanced person when it comes to fitness, we are sure that we will have a little bit of useful info for all. We are hoping that by visiting this website you will be able to come away from this experience fitter, smarter, and happier than ever, and we are always here to offer assistance to anyone who needs it. We thank you for taking the time to visit our website and hope you enjoy your time here.</p>
+        </div>
    </main>
    <footer>
         <p class="copyright">© <span id="cyear"></span> | Volodymyr Druchok | Alberta, Canada</p>
